--- a/user-service/api/api-spec.yaml
+++ b/user-service/api/api-spec.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/OAI/OpenAPI-Specification/refs/tags/3.1.1/schemas/v3.1/schema.yaml
-openapi: 3.1.0
+openapi: 3.0.0
 info:
   title: User Service API
   description: API for user management in blog microservice system
@@ -22,6 +22,9 @@ paths:
       tags:
         - Users
       operationId: listUsers
+      security:
+        - bearerAuth:
+          - all-users:r
       parameters:
         - name: offset
           in: query
@@ -42,7 +45,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserList'
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
         '401':
           $ref: '#/components/responses/Unauthorized'
         '403':
@@ -56,28 +61,30 @@ paths:
       tags:
         - Users
       operationId: createUser
-      required: true
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/UserCreate'
-    responses:
-      '201':
-        description: User created successfully
+      security: []
+      requestBody:
+        required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
-      '400':
-        $ref: '#/components/responses/BadRequest'
-      '409':
-        description: User with email already exists
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Error'
-      '500':
-        $ref: '#/components/responses/ServerError'
+              $ref: '#/components/schemas/UserCreate'
+      responses:
+        '201':
+          description: User created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '409':
+          description: User with email already exists
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          $ref: '#/components/responses/ServerError'
 
   /users/{userId}:
     parameters:
@@ -93,7 +100,10 @@ paths:
       description: Retrieves a specific user by their ID
       tags:
         - Users
-      operationId: lookupUserById
+      operationId: lookupUser
+      security:
+        - bearerAuth:
+          - all-users:r
       responses:
         '200':
           description: User retrieved successfully
@@ -115,6 +125,9 @@ paths:
       tags:
         - Users
       operationId: updateUser
+      security:
+        - bearerAuth:
+          - all-users:w
       requestBody:
         required: true
         content:
@@ -144,6 +157,9 @@ paths:
       tags:
         - Users
       operationId: deleteUser
+      security:
+        - bearerAuth:
+          - all-users:w
       responses:
         '204':
           description: User deleted successfully
@@ -185,7 +201,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserUpdate'
+              $ref: '#/components/schemas/UserUpdateCurrent'
       responses:
         '200':
           description: User updated successfully
@@ -207,6 +223,7 @@ paths:
       tags:
         - Authentication
       operationId: loginUser
+      security: []
       requestBody:
         required: true
         content:
@@ -244,36 +261,6 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/ServerError'
-  /auth/refresh:
-    post:
-      summary: Refresh token
-      description: Refreshes the access token using refresh token
-      tags:
-        - Authentication
-      operationId: refreshToken
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/RefreshTokenRequest'
-      responses:
-        '200':
-          description: Token refreshed successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AuthResponse'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          description: Invalid refresh token
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '500':
-          $ref: '#/components/responses/ServerError'
   /auth/password-reset:
     post:
       summary: Request password reset
@@ -281,6 +268,7 @@ paths:
       tags:
         - Authentication
       operationId: requestPasswordReset
+      security: []
       requestBody:
         required: true
         content:
@@ -307,6 +295,7 @@ paths:
       tags:
         - Authentication
       operationId: resetPassword
+      security: []
       parameters:
         - name: token
           in: path
@@ -347,9 +336,6 @@ components:
           type: string
           format: email
           description: User's email address
-        username:
-          type: string
-          description: User's username
         firstName:
           type: string
           description: User's first name
@@ -358,7 +344,7 @@ components:
           description: User's last name
         role:
           type: string
-          enum: [user, admin, editor]
+          enum: [user, admin]
           description: User's role in the system
         status:
           type: string
@@ -375,38 +361,13 @@ components:
       required:
         - id
         - email
-        - username
+        - firstName
+        - lastName
         - role
         - status
         - createdAt
         - updatedAt
     
-    UserList:
-      type: object
-      properties:
-        data:
-          type: array
-          items:
-            $ref: '#/components/schemas/User'
-        pagination:
-          type: object
-          properties:
-            total:
-              type: integer
-              description: Total number of users
-            pages:
-              type: integer
-              description: Total number of pages
-            currentPage:
-              type: integer
-              description: Current page number
-            limit:
-              type: integer
-              description: Number of items per page
-      required:
-        - data
-        - pagination
-
     UserCreate:
       type: object
       properties:
@@ -414,9 +375,6 @@ components:
           type: string
           format: email
           description: User's email address
-        username:
-          type: string
-          description: User's username
         password:
           type: string
           format: password
@@ -429,7 +387,8 @@ components:
           description: User's last name
       required:
         - email
-        - username
+        - firstName
+        - lastName
         - password
 
     UserUpdate:
@@ -439,9 +398,28 @@ components:
           type: string
           format: email
           description: User's email address
-        username:
+        firstName:
           type: string
-          description: User's username
+          description: User's first name
+        lastName:
+          type: string
+          description: User's last name
+        role:
+          type: string
+          enum: [user, admin]
+          description: User's role in the system
+        status:
+          type: string
+          enum: [active, inactive, pending, banned]
+          description: User's account status
+
+    UserUpdateCurrent:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+          description: User's email address
         firstName:
           type: string
           description: User's first name
@@ -480,33 +458,12 @@ components:
         accessToken:
           type: string
           description: JWT access token
-        refreshToken:
-          type: string
-          description: Refresh token for obtaining new access tokens
-        tokenType:
-          type: string
-          description: Type of token, typically 'Bearer'
-          default: Bearer
         expiresIn:
           type: integer
           description: Token expiration time in seconds
-        user:
-          $ref: '#/components/schemas/User'
       required:
         - accessToken
-        - refreshToken
-        - tokenType
         - expiresIn
-        - user
-
-    RefreshTokenRequest:
-      type: object
-      properties:
-        refreshToken:
-          type: string
-          description: Refresh token from previous authentication
-      required:
-        - refreshToken
 
     PasswordResetRequest:
       type: object
