--- a/user-service/api/api-spec.yaml
+++ b/user-service/api/api-spec.yaml
@@ -103,7 +103,7 @@ paths:
       operationId: lookupUser
       security:
         - bearerAuth:
-          - all-users:r
+          - all-users:read
       responses:
         '200':
           description: User retrieved successfully
@@ -127,7 +127,7 @@ paths:
       operationId: updateUser
       security:
         - bearerAuth:
-          - all-users:w
+          - all-users:write
       requestBody:
         required: true
         content:
@@ -159,7 +159,7 @@ paths:
       operationId: deleteUser
       security:
         - bearerAuth:
-          - all-users:w
+          - all-users:write
       responses:
         '204':
           description: User deleted successfully
@@ -348,16 +348,8 @@ components:
           description: User's role in the system
         status:
           type: string
-          enum: [active, inactive, pending, banned]
+          enum: [active, pending, banned]
           description: User's account status
-        createdAt:
-          type: string
-          format: date-time
-          description: When the user account was created
-        updatedAt:
-          type: string
-          format: date-time
-          description: When the user account was last updated
       required:
         - id
         - email
@@ -365,8 +357,6 @@ components:
         - lastName
         - role
         - status
-        - createdAt
-        - updatedAt
     
     UserCreate:
       type: object
@@ -410,7 +400,7 @@ components:
           description: User's role in the system
         status:
           type: string
-          enum: [active, inactive, pending, banned]
+          enum: [active, pending, banned]
           description: User's account status
 
     UserUpdateCurrent:
