--- a/user-service/api/api-spec.yaml
+++ b/user-service/api/api-spec.yaml
@@ -8,6 +8,10 @@ info:
     name: API Support
     email: support@example.com
 
+servers:
+  - url: http://localhost:9410/user-service/v1
+    description: The local development server
+
 tags:
   - name: Users
     description: User management endpoints
@@ -23,7 +27,7 @@ paths:
         - Users
       operationId: listUsers
       security:
-        - bearerAuth:
+        - BearerAuth:
           - all-users:r
       parameters:
         - name: offset
@@ -102,7 +106,7 @@ paths:
         - Users
       operationId: lookupUser
       security:
-        - bearerAuth:
+        - BearerAuth:
           - all-users:read
       responses:
         '200':
@@ -126,7 +130,7 @@ paths:
         - Users
       operationId: updateUser
       security:
-        - bearerAuth:
+        - BearerAuth:
           - all-users:write
       requestBody:
         required: true
@@ -158,7 +162,7 @@ paths:
         - Users
       operationId: deleteUser
       security:
-        - bearerAuth:
+        - BearerAuth:
           - all-users:write
       responses:
         '204':
@@ -531,11 +535,11 @@ components:
             $ref: '#/components/schemas/Error'
 
   securitySchemes:
-    bearerAuth:
+    BearerAuth:
       type: http
       scheme: bearer
       bearerFormat: JWT
       description: JWT authorization header using the Bearer scheme
 
 security:
-  - bearerAuth: []
+  - BearerAuth: []
