--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,14 +33,6 @@ services:
       timeout: 60s
       retries: 60
 
-  kafka-init:
-    image: bitnami/kafka:latest
-    depends_on:
-      kafka:
-        condition: service_healthy
-    command: [ "/bin/bash", "-c", "kafka-topics.sh --create --topic minute-data --partitions 24 --replication-factor 1 --bootstrap-server kafka:9092" ]
-    init: true
-
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     ports:
@@ -89,7 +81,7 @@ services:
     ports:
       - "9410:9410"
     healthcheck:
-      test: ["CMD", "/usr/bin/curl", "-s", "--fail", "http://localhost:8080/health"]
+      test: ["CMD", "/usr/bin/curl", "-s", "--fail", "http://localhost:9410/health"]
       interval: 10s
       timeout: 10s
       retries: 3
@@ -117,11 +109,17 @@ services:
     ports:
       - "9411:9411"
     healthcheck:
-      test: ["CMD", "/usr/bin/curl", "-s", "--fail", "http://localhost:8080/health"]
+      test: ["CMD", "/usr/bin/curl", "-s", "--fail", "http://localhost:9411/health"]
       interval: 10s
       timeout: 10s
       retries: 3
     user: "${UID}:${GID}"
+
+  mailpit:
+    image: axllent/mailpit:latest
+    ports:
+      - "8025:8025" # Web UI
+      - "1025:1025" # SMTP port
 
   notification-service:
     build:
@@ -143,9 +141,9 @@ services:
     environment:
       ENVIRONMENT: "dev"
     ports:
-      - "9411:9411"
+      - "9412:9412"
     healthcheck:
-      test: ["CMD", "/usr/bin/curl", "-s", "--fail", "http://localhost:8080/health"]
+      test: ["CMD", "/usr/bin/curl", "-s", "--fail", "http://localhost:9412/health"]
       interval: 10s
       timeout: 10s
       retries: 3
