--- a/config/notification-service/config.yaml
+++ b/config/notification-service/config.yaml
@@ -1,7 +1,7 @@
 api:
   addr: ":9410"
 general:
-  org_name: "Blog Microservices"
+  org_name: "Blog Microservice"
   website_base_url: "https://example.com"
 transport:
   type: kafka
