--- a/.github/workflows/notification-service.yaml
+++ b/.github/workflows/notification-service.yaml
@@ -53,8 +53,8 @@ jobs:
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: .
-          build-args:
-            - BUILD_TARGET=notification-service
+          build-args: |
+            BUILD_TARGET=notification-service
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
